수정(7.21)